Fix media was being overlapped by observatory

--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -566,7 +566,7 @@ button:hover {
     }
 
     .observatory {
-        height: 1060px;
+        height: 1170px;
     }
 
     .castle-cafe {
